# detection-as-code

./: README.md  pyproject.toml
.github/workflows/: ci.yml  rule-review.yml
docs/: architecture.md  threat_model.md
examples/rules/: windows_suspicious_scheduled_task.yaml
src/detection_as_code/: __init__.py  ai_review.py  cli.py  elastic_client.py  exporters.py  kibana_client.py  models.py  secrets.py  validators.py
tests/: test_ai_review.py  test_cli.py  test_elastic_client.py  test_exporters.py  test_kibana_client.py  test_models.py  test_validators.py
