[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detection-as-code"
version = "0.2.0"
description = "A schema-first detection engineering pipeline: author rules once, lint them deterministically, export to Kibana or Sigma, and get an advisory AI review before they ship."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "SentinelByte" }]
dependencies = [
    "requests>=2.31",
    "elasticsearch>=8.13,<9",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.34"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "types-requests",
    "types-PyYAML",
    "anthropic>=0.34",
]

[project.scripts]
detection-as-code = "detection_as_code.cli:main"

[project.urls]
Repository = "https://github.com/SentinelByte/detection-as-code"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests"]
